force-app/main/default/objects/numm__FADepreciationHis__c/numm__FADepreciationHis__c.object-meta.xml
<CustomObject>
    <label>Historique des Amortissements</label>
    <nameField>
        <displayFormat>FAAmoHis-{000000}</displayFormat>
        <label>Nom de Historiques des Amortissements</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques des Amortissements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>