force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__AccountingDate__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingDate__c</fullName>
    <label>Date comptabilisation</label>
    <type>Date</type>
</CustomField>