force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__Depreciation02__c.field-meta.xml
<CustomField>
    <fullName>numm__Depreciation02__c</fullName>
    <label>Annuités fiscales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>