force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__Depreciation04__c.field-meta.xml
<CustomField>
    <fullName>numm__Depreciation04__c</fullName>
    <label>Annuités IFRS 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>