force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__DescriptionRV__c.field-meta.xml
<CustomField>
    <fullName>numm__DescriptionRV__c</fullName>
    <label>LibelleVR</label>
    <type>TextArea</type>
</CustomField>