force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__EndDatePeriode__c.field-meta.xml
<CustomField>
    <fullName>numm__EndDatePeriode__c</fullName>
    <label>Date de fin période</label>
    <type>Date</type>
</CustomField>