force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__ExcepEndBookValue01__c.field-meta.xml
<CustomField>
    <fullName>numm__ExcepEndBookValue01__c</fullName>
    <label>Déro VNC Fin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>