force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__FAHeaderDeprHis__c.field-meta.xml
<CustomField>
    <fullName>numm__FAHeaderDeprHis__c</fullName>
    <label>Historique entête plans</label>
    <referenceTo>numm__FAHeaderDeprHis__c</referenceTo>
    <relationshipLabel>Historiques des Amortissements</relationshipLabel>
    <relationshipName>FADepreciationsHis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>