force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__StartAmountRV1__c.field-meta.xml
<CustomField>
    <fullName>numm__StartAmountRV1__c</fullName>
    <label>VR Début période Comptable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>