force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__StartBookValue03__c.field-meta.xml
<CustomField>
    <fullName>numm__StartBookValue03__c</fullName>
    <label>VNC Début IFRS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>