force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__StartDatePeriode__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDatePeriode__c</fullName>
    <label>Date de début période</label>
    <type>Date</type>
</CustomField>