force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__TECHAmountRV4__c.field-meta.xml
<CustomField>
    <fullName>numm__TECHAmountRV4__c</fullName>
    <label>TECH VR4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>