force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__UW01__c.field-meta.xml
<CustomField>
    <fullName>numm__UW01__c</fullName>
    <label>U.O comptable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>