force-app/main/default/objects/numm__FADepreciationHis__c/fields/numm__UW04__c.field-meta.xml
<CustomField>
    <fullName>numm__UW04__c</fullName>
    <label>U.O IFRS 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>